kubernetes/apps/infrastructure/prometheus/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: prometheus.decort.tech
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: prometheus.decort.tech
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route-redirect
  namespace: monitoring
spec:
  parentRefs:
    - name: prometheus-gateway
      namespace: monitoring
      sectionName: http
  hostnames:
    - "prometheus.decort.tech"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: prometheus-gateway
      namespace: monitoring
      sectionName: https
  hostnames:
    - "prometheus.decort.tech"
  rules:
    - backendRefs:
        - name: prometheus-operated
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
